[package]
name = "payload_encoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.7", features = ["derive"] }
hex = "0.4.3"
itertools = "0.13.0"
urlencoding = "2.1.3"
